# bashlab_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  freq2wavelen.c  freq2wavelen_new.c  freq2wlen.c  trapz.c  typeof.c
include/: macros.h  trapz.h
src/: trapz.c  typeof_impl.c
test/: bashlab.json
